refactor: Rename CreateOrderCommandHandler to CreateOrderUseCase and update related references